<resources>
    <string name="app_name">DharmrajMachineTest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="category_name">Category name</string>
    <string name="add_category">Add Category</string>
    <string name="add_item">Add Item</string>
    <string name="welcome_to_sales_management">Welcome to Sales Management</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>

    <string name="price_colon">Price :</string>

    <!--Generate fragment strings-->
    <string name="items">Items</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="sales_taxes">Sales taxes :</string>
    <string name="no_item_found">No item found!!</string>
    <string name="add_product">Add Product</string>
    <string name="_00_00">00.00</string>
    <string name="expiry_date">Expiry date</string>
    <string name="manufacture_date">Manufacture Date</string>
    <string name="update">Update</string>

</resources>
